Hide docs nav for pages except docs page

--- a/custom_theme/main.html
+++ b/custom_theme/main.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block tabs%}
-<div id="header-block" style="display:flex">
+<div id="tabs">
   {{ super() }}
 </div>
 <div id="blue-bar"></div>
