--- a/custom_theme/main.html
+++ b/custom_theme/main.html
@@ -12,6 +12,13 @@
     {% include "partials/search.html" %}
   {% endif %}
   </div>
+
+  <div class="md-header__title" data-md-component="header-title">
+    <div class="md-header__ellipsis">
+      <div class="md-header__topic"></div>
+      <div class="md-header__topic" data-md-component="header-topic"></div>
+    </div>
+  </div>
 </div>
 <div id="blue-bar"></div>
 {% endblock %}
