Add search icon to header for narrow screens

--- a/custom_theme/main.html
+++ b/custom_theme/main.html
@@ -4,7 +4,7 @@
 <div id="tabs">
   {{ super() }}
 
-  <div id="search-container">
+  <div class="search-container">
   {% if "material/search" in config.plugins %}
     <label class="md-header__button md-icon" for="__search">
       {% include ".icons/material/magnify.svg" %}
