Stop search bar moving above header when scrolling page down

--- a/custom_theme/main.html
+++ b/custom_theme/main.html
@@ -18,6 +18,8 @@
   </div>
 </div>
 
+<label id="search-overlay" class="md-search__overlay" for="__search"></label>
+
 <div id="blue-bar"></div>
 
 {% endblock %}
